--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:cuentos-killa-FE": "node dist/cuentos-killa-fe/server/server.mjs"
+    "serve:ssr:cuentos-killa-FE": "node dist/cuentos-killa-fe/server/server.mjs",
+    "vercel-build": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
