--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "chart.js": "^4.4.0",
+    "ng2-charts": "^4.0.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
 "@angular-devkit/build-angular": "^18.0.0",
