--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.0",
+    "@sentry/angular-ivy": "^7.120.3",
+    "@sentry/tracing": "^7.120.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@sentry/angular-ivy": "^7.120.3",
-    "@sentry/tracing": "^7.120.3"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-"@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@types/express": "^4.17.17",
