--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,9 @@
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
+            "prerenderOptions": {
+              "routes": []
+            },
             "ssr": {
               "entry": "server.ts"
             }
