--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
             "scripts": [],
             "allowedCommonJsDependencies": ["localforage"],
             "server": "src/main.server.ts",
-            "prerender": false,
+            "prerender": true,
             "ssr": {
               "entry": "server.ts"
             }
