--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.0",
+    "@sentry/angular": "^7.120.3",
+    "@sentry/tracing": "^7.120.3",
+    "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "ng2-charts": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "chart.js": "^4.4.0",
-    "ng2-charts": "^4.0.0",
-    "date-fns": "^2.30.0",
-    "@sentry/angular": "^7.120.3",
-    "@sentry/tracing": "^7.120.3"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.0",
