--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/",
+    "public": "dist/cuentos-killa-fe/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
